--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ body {
 
 /* RESPONSIVE DESIGN NAVIGATION */
 @media (max-width: 991px) {
+  nav {
+    background-color: #000000 !important;
+    opacity: 0.7 !important;
+  }
+  #lang-translation-links {
+    padding-top: 0px;
+  }
   .navbar-expand-lg .navbar-nav .nav-link {
     color: #ffffff;
     border: none !important;
@@ -477,6 +484,10 @@ body,
 
 #blogs .carousel-item {
   background: none;
+}
+
+#blogs #blog-article-react-logo {
+  height: 32vh;
 }
 
 /* Footer */
