--- a/css/style.scss
+++ b/css/style.scss
@@ -309,7 +309,7 @@ body,
 /* ABOUT and VISION CONTAINER RESPONSIVE */
 
 @media (max-width: 991px) {
-
+  
   #about-us {
 
     #about-text {
@@ -593,4 +593,28 @@ body,
       color: $white-color;
       padding: 7px;
     }
+  }
+
+
+  // Turn off animate.css and wow.js for mobile devices
+
+  .animated {
+    /*CSS transitions*/
+  -o-transition-property: none !important;
+  -moz-transition-property: none !important;
+  -ms-transition-property: none !important;
+  -webkit-transition-property: none !important;
+  transition-property: none !important;
+  /*CSS transforms*/
+  -o-transform: none !important;
+  -moz-transform: none !important;
+  -ms-transform: none !important;
+  -webkit-transform: none !important;
+  transform: none !important;
+  /*CSS animations*/
+  -webkit-animation: none !important;
+  -moz-animation: none !important;
+  -o-animation: none !important;
+  -ms-animation: none !important;
+  animation: none !important;
   }
